--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3483,3 +3483,11 @@ WordPress plugin related-posts-for-wp:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24482 https://m0ze.ru/vulnerability/[2021-04-18]-[WordPress]-[CWE-79]-Related-Posts-for-WordPress-WordPress-Plugin-v2.0.4.txt'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin flexible-checkout-fields:
+  1:
+    location: ['/wp-content/plugins/flexible-checkout-fields/readme.txt']
+    secure_version: '2.3.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2020/02/site-takeover-campaign-exploits-multiple-zero-day-vulnerabilities/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
