--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3491,3 +3491,11 @@ WordPress plugin flexible-checkout-fields:
     cve: 'https://blog.nintechnet.com/zero-day-vulnerability-fixed-in-wordpress-flexible-checkout-fields-for-woocommerce-plugin/ https://www.wordfence.com/blog/2020/02/site-takeover-campaign-exploits-multiple-zero-day-vulnerabilities/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin async-javascript:
+  1:
+    location: ['/wp-content/plugins/async-javascript/readme.txt']
+    secure_version: '2.20.02.27'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2020/02/site-takeover-campaign-exploits-multiple-zero-day-vulnerabilities/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
