--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3507,3 +3507,11 @@ WordPress plugin wd-google-maps:
     cve: 'https://www.wordfence.com/blog/2020/02/site-takeover-campaign-exploits-multiple-zero-day-vulnerabilities/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin modern-events-calendar-lite:
+  1:
+    location: ['/wp-content/plugins/modern-events-calendar-lite/readme.txt']
+    secure_version: '5.1.7'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-9459 https://www.wordfence.com/blog/2020/02/site-takeover-campaign-exploits-multiple-zero-day-vulnerabilities/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
