--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3528,3 +3528,11 @@ WordPress plugin woocommerce-smart-coupons:
     cve: 'https://www.wordfence.com/blog/2020/03/coupon-creation-vulnerability-patched-in-woocommerce-smart-coupons/'  # TODO: No CVE?
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin admin-columns-pro:
+  1:
+    location: ['/wp-content/plugins/admin-columns-pro/readme.txt']
+    secure_version: '5.5.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24149 https://www.syss.de/fileadmin/dokumente/Publikationen/Advisories/SYSS-2021-032.txt'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
