--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3552,3 +3552,12 @@ WordPress plugin wp-attachment-export:
     cve: 'https://lists.openwall.net/full-disclosure/2015/07/14/4'  # TODO: CVE requested 2021-08-11
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# N/A 5.4 https://blog.sucuri.net/2015/04/security-advisory-xss-vulnerability-affecting-multiple-wordpress-plugins.html https://klikki.fi/adv/yoast_analytics2.html
+WordPress plugin google-analytics:
+  1:
+    location: ['/wp-content/plugins/google-analytics/readme.txt']
+    secure_version: '5.4.5'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://advisories.dxw.com/advisories/xss-in-google-analytics-by-yoast-premium-by-privileged-users/ https://lists.openwall.net/full-disclosure/2015/08/12/10'  # TODO: No CVE
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
