--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3561,3 +3561,11 @@ WordPress plugin google-analytics:
     cve: 'https://advisories.dxw.com/advisories/xss-in-google-analytics-by-yoast-premium-by-privileged-users/ https://lists.openwall.net/full-disclosure/2015/08/12/10'  # TODO: No CVE
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin content-text-slider-on-post:
+  1:
+    location: ['/wp-content/plugins/content-text-slider-on-post/readme.txt']
+    secure_version: '6.9'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://seclists.org/bugtraq/2015/Dec/124'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
