--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3569,3 +3569,11 @@ WordPress plugin content-text-slider-on-post:
     cve: 'https://seclists.org/bugtraq/2015/Dec/124'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin slideshow-jquery-image-gallery:
+  1:
+    location: ['/wp-content/plugins/slideshow-jquery-image-gallery/readme.txt']
+    secure_version: '2.2.22'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-3634 http://www.openwall.com/lists/oss-security/2015/05/02/12'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
