--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3567,7 +3567,7 @@ WordPress plugin content-text-slider-on-post:
     location: ['/wp-content/plugins/content-text-slider-on-post/readme.txt']
     secure_version: '6.9'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://seclists.org/bugtraq/2015/Dec/124'
+    cve: 'https://seclists.org/bugtraq/2015/Dec/124'  # TODO: CVE requested 2021-08-11
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin slideshow-jquery-image-gallery:
