--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3581,3 +3581,12 @@ WordPress plugin slideshow-jquery-image-gallery:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-3634 http://www.openwall.com/lists/oss-security/2015/05/02/12'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin image-export:
+  1:
+    location: ['/wp-content/plugins/image-export/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    # https://packetstormsecurity.com/files/132688/
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-5609 https://www.openwall.com/lists/oss-security/2015/07/13/10 http://www.vapid.dhs.org/advisory.php?v=135'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
