--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1132,11 +1132,11 @@ WordPress plugin paid-memberships-pro:
     post_processing: ['php5.fcgi']
 # CVE-2014-2340 3.1.1 https://packetstormsecurity.com/files/125991/ https://www.immuniweb.com/advisory/HTB23206 https://www.immuniweb.com/advisory/HTB23207 https://www.exploit-db.com/exploits/32701
 # CVE-2014-2579 3.1.1 https://packetstormsecurity.com/files/125991/ https://www.immuniweb.com/advisory/HTB23206 https://www.immuniweb.com/advisory/HTB23207 https://www.exploit-db.com/exploits/32701
-# CVE-2014-8603 3.1.2 http://www.vapid.dhs.org/advisory.php?v=110 https://vapid.dhs.org/advisories/wordpress/plugins/Xcloner-v3.1.1/ https://www.exploit-db.com/exploits/35212
-# CVE-2014-8604 3.1.2 http://www.vapid.dhs.org/advisory.php?v=110 https://vapid.dhs.org/advisories/wordpress/plugins/Xcloner-v3.1.1/ https://www.exploit-db.com/exploits/35212
-# CVE-2014-8605 3.1.2 http://www.vapid.dhs.org/advisory.php?v=110 https://vapid.dhs.org/advisories/wordpress/plugins/Xcloner-v3.1.1/ https://www.exploit-db.com/exploits/35212
-# CVE-2014-8606 3.1.2 http://www.vapid.dhs.org/advisory.php?v=110 https://vapid.dhs.org/advisories/wordpress/plugins/Xcloner-v3.1.1/ https://www.exploit-db.com/exploits/35212
-# CVE-2014-8607 3.1.2 http://www.vapid.dhs.org/advisory.php?v=110 https://vapid.dhs.org/advisories/wordpress/plugins/Xcloner-v3.1.1/ https://www.exploit-db.com/exploits/35212
+# CVE-2014-8603 3.1.2 http://www.vapid.dhs.org/advisory.php?v=110 https://vapid.dhs.org/advisories/wordpress/plugins/Xcloner-v3.1.1/ https://www.openwall.com/lists/oss-security/2014/11/06/1 https://www.exploit-db.com/exploits/35212
+# CVE-2014-8604 3.1.2 http://www.vapid.dhs.org/advisory.php?v=110 https://vapid.dhs.org/advisories/wordpress/plugins/Xcloner-v3.1.1/ https://www.openwall.com/lists/oss-security/2014/11/06/1 https://www.exploit-db.com/exploits/35212
+# CVE-2014-8605 3.1.2 http://www.vapid.dhs.org/advisory.php?v=110 https://vapid.dhs.org/advisories/wordpress/plugins/Xcloner-v3.1.1/ https://www.openwall.com/lists/oss-security/2014/11/06/1 https://www.exploit-db.com/exploits/35212
+# CVE-2014-8606 3.1.2 http://www.vapid.dhs.org/advisory.php?v=110 https://vapid.dhs.org/advisories/wordpress/plugins/Xcloner-v3.1.1/ https://www.openwall.com/lists/oss-security/2014/11/06/1 https://www.exploit-db.com/exploits/35212
+# CVE-2014-8607 3.1.2 http://www.vapid.dhs.org/advisory.php?v=110 https://vapid.dhs.org/advisories/wordpress/plugins/Xcloner-v3.1.1/ https://www.openwall.com/lists/oss-security/2014/11/06/1 https://www.exploit-db.com/exploits/35212
 # CVE-2015-4336 3.1.3 https://packetstormsecurity.com/files/132107/ https://seclists.org/bugtraq/2015/Jun/33
 # CVE-2015-4337 3.1.3 https://packetstormsecurity.com/files/132107/ https://seclists.org/bugtraq/2015/Jun/33
 # CVE-2015-4338 3.1.3 https://packetstormsecurity.com/files/132107/ https://seclists.org/bugtraq/2015/Jun/33
