--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3612,3 +3612,11 @@ WordPress plugin wp-championship:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-5308 http://www.vapidlabs.com/advisory.php?v=155'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin mobile-friendly-app-builder-by-easytouch:
+  1:
+    location: ['/wp-content/plugins/mobile-friendly-app-builder-by-easytouch/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-1002000 http://www.vapidlabs.com/advisory.php?v=179 https://www.openwall.com/lists/oss-security/2017/03/06/5'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
