--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3636,3 +3636,11 @@ WordPress plugin mobile-app-builder-by-wappress:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-1002001 http://www.vapidlabs.com/advisory.php?v=180 https://www.openwall.com/lists/oss-security/2017/03/06/5'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin webapp-builder:
+  1:
+    location: ['/wp-content/plugins/webapp-builder/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-1002002 http://www.vapidlabs.com/advisory.php?v=181 https://www.openwall.com/lists/oss-security/2017/03/06/5'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
