--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2016,7 +2016,7 @@ WordPress plugin zen-mobile-app-native:
     location: ['/wp-content/plugins/zen-mobile-app-native/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-6104 http://www.vapidlabs.com/advisory.php?v=178'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-6104 http://www.vapidlabs.com/advisory.php?v=178 https://www.openwall.com/lists/oss-security/2017/03/02/12'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin stats-counter:
