--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3653,3 +3653,11 @@ WordPress plugin wp2android-turn-wp-site-into-android-app:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-1002003 http://www.vapidlabs.com/advisory.php?v=182 https://www.openwall.com/lists/oss-security/2017/03/06/5'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-fusion-lite:
+  1:
+    location: ['/wp-content/plugins/wp-fusion-lite/readme.txt']
+    secure_version: '3.37.30'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-34661 https://www.wordfence.com/vulnerability-advisories/#CVE-2021-34661'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
