Added support for WordPress plugin side-menu-lite

--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3665,3 +3665,11 @@ WordPress plugin wp-fusion-lite:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-34660 https://www.wordfence.com/vulnerability-advisories/#CVE-2021-34660 https://nvd.nist.gov/vuln/detail/CVE-2021-34661 https://www.wordfence.com/vulnerability-advisories/#CVE-2021-34661'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin side-menu-lite:
+  1:
+    location: ['/wp-content/plugins/side-menu-lite/readme.txt']
+    secure_version: '2.2.1'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24521 https://github.com/pang0lin/CVEproject/blob/main/wordpress_side-menu-lite_sqli.md'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
