Added support for WordPress plugin stock-in

--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3673,3 +3673,11 @@ WordPress plugin side-menu-lite:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24521 https://github.com/pang0lin/CVEproject/blob/main/wordpress_side-menu-lite_sqli.md'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin stock-in:
+  1:
+    location: ['/wp-content/plugins/stock-in/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24520 https://github.com/pang0lin/CVEproject/blob/main/wordpress_Stock-in-and-out_sqli.md'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
