--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -1,5 +1,8 @@
 # URL: https://www.drupal.org/
 # NOTE: http://openconcept.ca/drupal-security-guide
+# NOTE: Drupal 7 end of life 2022-11-28
+#   https://www.drupal.org/psa-2019-02-25
+#   https://www.drupal.org/psa-2020-06-24
 # N/A                                   CVE-2012-2922   7.15
 # https://drupal.org/SA-CORE-2012-001   CVE-2012-0825   7.11/6.23
 # https://drupal.org/SA-CORE-2012-001   CVE-2012-0826   7.11/6.23
@@ -112,28 +115,37 @@
 # https://drupal.org/SA-CORE-2021-002   CVE-2020-13672  9.1.7/9.0.12/8.9.14/7.80
 # https://drupal.org/SA-CORE-2021-003   N/A             9.1.9/9.0.14/8.9.16
 # https://drupal.org/SA-CORE-2021-004   CVE-2021-32610  9.2.2/9.1.11/8.9.17/7.82
+# https://drupal.org/SA-CORE-2021-005   N/A             9.2.4/9.1.12/8.9.18
+Drupal 9.2:
+  1:
+    location: ['/core/lib/Drupal.php']
+    secure_version: '9.2.4'
+    regexp: ['  const VERSION.*?(?P<version>9\.2\.[0-9]{1,})']
+    cve: 'https://drupal.org/SA-CORE-2021-005'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
 Drupal 9.1:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '9.2.2'
+    secure_version: '9.1.12'
     regexp: ['  const VERSION.*?(?P<version>9\.1\.[0-9]{1,})']
-    cve: 'https://drupal.org/SA-CORE-2021-004'
+    cve: 'https://drupal.org/SA-CORE-2021-005'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 9.0:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '9.0.14'
+    secure_version: '9.2.4'
     regexp: ['  const VERSION.*?(?P<version>9\.0\.[0-9]{1,})']
-    cve: 'https://drupal.org/SA-CORE-2021-003'
+    cve: 'Drupal 9.0 is end of life.'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 8.9:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '8.9.17'
+    secure_version: '8.9.18'
     regexp: ['  const VERSION.*?(?P<version>8\.[0-9.]{1,})']
-    cve: 'https://drupal.org/SA-CORE-2021-004'
+    cve: 'https://drupal.org/SA-CORE-2021-005'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 7:
