--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3697,3 +3697,11 @@ WordPress plugin tubepress:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2008-7321'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin poll-maker:
+  1:
+    location: ['/wp-content/plugins/poll-maker/readme.txt']
+    secure_version: '3.2.9'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-34635'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
