Added support for WordPress plugin stop-user-enumeration

--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3705,3 +3705,11 @@ WordPress plugin poll-maker:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-34635'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin stop-user-enumeration:
+  1:
+    location: ['/wp-content/plugins/stop-user-enumeration/readme.txt']
+    secure_version: '1.3.9'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-1000226 https://advisories.dxw.com/advisories/stop-user-enumeration-rest-api/ https://lists.openwall.net/full-disclosure/2017/07/26/8'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
