--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3735,3 +3735,12 @@ WordPress plugin learndash:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-6009 https://learndash.releasenotes.io/release/YBfaq-version-316'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin yet-another-related-posts-plugin:
+  1:
+    location: ['/wp-content/plugins/yet-another-related-posts-plugin/readme.txt']
+    secure_version: '4.2.5'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    # https://seclists.org/fulldisclosure/2015/May/27
+    cve: 'https://lists.openwall.net/full-disclosure/2015/05/08/3 https://packetstormsecurity.com/files/131830/ https://www.exploit-db.com/exploits/36954'  # TODO: No CVE?
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
