--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3745,3 +3745,11 @@ WordPress plugin yet-another-related-posts-plugin:
     cve: 'https://lists.openwall.net/full-disclosure/2015/05/08/3 https://packetstormsecurity.com/files/131830/ https://www.exploit-db.com/exploits/36954'  # TODO: No CVE?
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-seopress:
+  1:
+    location: ['/wp-content/plugins/wp-seopress/readme.txt']
+    secure_version: '5.0.4'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-34641 https://www.wordfence.com/blog/2021/08/xss-vulnerability-patched-in-seopress-affects-100000-sites/ https://threatpost.com/xss-bug-seopress-wordpress-plugin/168702/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
