--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3769,3 +3769,11 @@ WordPress plugin google-site-kit:
     cve: 'https://www.wordfence.com/blog/2020/05/vulnerability-in-google-wordpress-plugin-grants-attacker-search-console-access/'  # TODO: No CVE 2021-08-22
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wpjobboard:
+  1:
+    location: ['/wp-content/plugins/wpjobboard/readme.txt']
+    secure_version: '5.0'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-15375 https://lists.openwall.net/full-disclosure/2017/09/04/1 https://www.vulnerability-lab.com/get_content.php?id=1941'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
