--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3795,9 +3795,17 @@ WordPress plugin minimal-coming-soon-maintenance-mode:
     post_processing: ['php5.fcgi']
 WordPress plugin wordpress-database-reset:
   1:
-    location: ['/wp-content/plugins/wordpress-database-reset//readme.txt']
+    location: ['/wp-content/plugins/wordpress-database-reset/readme.txt']
     secure_version: '3.15'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-7047 https://nvd.nist.gov/vuln/detail/CVE-2020-7048 https://www.wordfence.com/blog/2020/01/easily-exploitable-vulnerabilities-patched-in-wp-database-reset-plugin/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress plugin idx-broker-platinum:
+  1:
+    location: ['/wp-content/plugins/idx-broker-platinum/readme.txt']
+    secure_version: '2.6.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-9514 https://nvd.nist.gov/vuln/detail/CVE-2020-11512 https://www.wordfence.com/blog/2020/03/vulnerabilities-patched-in-impress-for-idx-broker/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
