--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3809,3 +3809,11 @@ WordPress plugin idx-broker-platinum:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-9514 https://nvd.nist.gov/vuln/detail/CVE-2020-11512 https://www.wordfence.com/blog/2020/03/vulnerabilities-patched-in-impress-for-idx-broker/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-nested-pages:
+  1:
+    location: ['/wp-content/plugins/wp-nested-pages/readme.txt']
+    secure_version: '3.1.16'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-38342 https://nvd.nist.gov/vuln/detail/CVE-2021-38343 https://www.wordfence.com/blog/2021/08/nested-pages-patches-post-deletion-vulnerability/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
