--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3825,3 +3825,11 @@ WordPress plugin post-grid:
     cve: 'https://www.wordfence.com/blog/2020/10/high-severity-vulnerabilities-in-post-grid-and-team-showcase-plugins/ https://nvd.nist.gov/vuln/detail/CVE-2020-35936 https://nvd.nist.gov/vuln/detail/CVE-2020-35937 https://nvd.nist.gov/vuln/detail/CVE-2020-35938 https://nvd.nist.gov/vuln/detail/CVE-2020-35939'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin team:
+  1:
+    location: ['/wp-content/plugins/team/readme.txt']
+    secure_version: '1.22.16'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2020/10/high-severity-vulnerabilities-in-post-grid-and-team-showcase-plugins/ https://nvd.nist.gov/vuln/detail/CVE-2020-35936 https://nvd.nist.gov/vuln/detail/CVE-2020-35937 https://nvd.nist.gov/vuln/detail/CVE-2020-35938 https://nvd.nist.gov/vuln/detail/CVE-2020-35939'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
