Added support for WordPress plugin redux-framework

--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3833,3 +3833,11 @@ WordPress plugin team:
     cve: 'https://www.wordfence.com/blog/2020/10/high-severity-vulnerabilities-in-post-grid-and-team-showcase-plugins/ https://nvd.nist.gov/vuln/detail/CVE-2020-35936 https://nvd.nist.gov/vuln/detail/CVE-2020-35937 https://nvd.nist.gov/vuln/detail/CVE-2020-35938 https://nvd.nist.gov/vuln/detail/CVE-2020-35939'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin redux-framework:
+  1:
+    location: ['/wp-content/plugins/redux-framework/readme.txt']
+    secure_version: '4.2.13'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-38312 https://nvd.nist.gov/vuln/detail/CVE-2021-38314 https://www.wordfence.com/blog/2021/09/over-1-million-sites-affected-by-redux-framework-vulnerabilities/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
