--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3841,3 +3841,11 @@ WordPress plugin redux-framework:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-38312 https://nvd.nist.gov/vuln/detail/CVE-2021-38314 https://www.wordfence.com/blog/2021/09/over-1-million-sites-affected-by-redux-framework-vulnerabilities/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin xo-security:
+  1:
+    location: ['/wp-content/plugins/xo-security/readme.txt']
+    secure_version: '3.1.6'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://wordpress.org/plugins/xo-security/#developers'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
