--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3857,3 +3857,11 @@ WordPress plugin countdown-wpdevart-extended:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-34636 https://www.wordfence.com/vulnerability-advisories/#CVE-2021-34636'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin access-demo-importer:
+  1:
+    location: ['/wp-content/plugins/access-demo-importer/readme.txt']
+    secure_version: '1.0.7'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-39317 https://www.wordfence.com/blog/2021/10/high-severity-vulnerability-patched-in-access-demo-importer-plugin/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
