--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3865,3 +3865,11 @@ WordPress plugin access-demo-importer:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-39317 https://www.wordfence.com/blog/2021/10/high-severity-vulnerability-patched-in-access-demo-importer-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin woo-stripe-payment:
+  1:
+    location: ['/wp-content/plugins/woo-stripe-payment/readme.txt']
+    secure_version: '3.3.10'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-39347 https://www.wordfence.com/vulnerability-advisories/#CVE-2021-39347'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
