--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3901,3 +3901,12 @@ WordPress plugin embed-articles:
     cve: 'https://lists.openwall.net/bugtraq/2015/05/06/11'  # Same as https://lists.openwall.net/bugtraq/2015/05/07/15
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin clickbank-ads-clickbank-widget:
+  1:
+    location: ['/wp-content/plugins/clickbank-ads-clickbank-widget/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    # TODO: This might be fixed
+    cve: 'https://lists.openwall.net/bugtraq/2015/05/06/14'  # https://packetstormsecurity.com/files/131814/ https://www.exploit-db.com/exploits/36959 https://seclists.org/bugtraq/2015/May/45
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
