--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3953,3 +3953,11 @@ WordPress plugin optinmonster:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-39341 https://www.wordfence.com/blog/2021/10/1000000-sites-affected-by-optinmonster-vulnerabilities/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin hashthemes-demo-importer:
+  1:
+    location: ['/wp-content/plugins/hashthemes-demo-importer/readme.txt']
+    secure_version: '1.1.4'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-39333 https://www.wordfence.com/blog/2021/10/site-deletion-vulnerability-in-hashthemes-plugin/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
