Added support for WordPress plugin wp-stats-dashboard

--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3985,3 +3985,11 @@ WordPress plugin wp-stats:
     cve: 'https://www.openwall.com/lists/oss-security/2015/06/17/6'  # TODO: CVE ID requested 2021-10-31
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-stats-dashboard:
+  1:
+    location: ['/wp-content/plugins/wp-stats-dashboard/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-9399 http://cinu.pl/research/wp-plugins/mail_468b117b2dc86cb3d2ae4b8c81884a99.html http://blog.cinu.pl/2015/11/php-static-code-analysis-vs-top-1000-wordpress-plugins.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
