--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2402,7 +2402,7 @@ WordPress plugin roomcloud:
     location: ['/wp-content/plugins/roomcloud/readme.txt']
     secure_version: '1.3'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-3904'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-3904 https://www.openwall.com/lists/oss-security/2015/05/09/1'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin wp-powerplaygallery:
