Added reference url

--- a/yamls/phpliteadmin.yml
+++ b/yamls/phpliteadmin.yml
@@ -1,5 +1,5 @@
 # URL: https://www.phpliteadmin.org/
-# CVE-2015-6518
+# CVE-2015-6518 http://hyp3rlinx.altervista.org/advisories/AS-PHPLITEADMIN0705.txt https://lists.openwall.net/bugtraq/2015/07/06/16
 # CVE-2015-6517
 # CVE-2015-6517
 # CVE-2015-6518
