--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -4013,3 +4013,11 @@ WordPress plugin shapepress-dsgvo:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-42359 https://www.wordfence.com/blog/2021/11/vulnerability-in-wp-dsgvo-tools-gdpr-plugin-allows-unauthenticated-page-deletion/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin contact-form-7-datepicker:
+  1:
+    location: ['/wp-content/plugins/contact-form-7-datepicker/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-11516 https://www.wordfence.com/blog/2020/04/high-severity-vulnerability-leads-to-closure-of-plugin-with-over-100000-installations/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
